[package]
name = "michromer"
description = "This is a small library to interact with the stockfighter simulation challenges."
version = "0.4.0"
authors = ["Elliott Clark <elliott@fb.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/elliottneilclark/michromer"

[dependencies]
hyper = "0.10.5"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
log = "0.3.7"
chrono = { version = "0.3", features = ["serde", "rustc-serialize"] }

[features]
default = []
